jilles      2006/09/13 22:08:28 UTC	(20060913-6383)
  Log:
  Adapt catserv to ctcp changes.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ircd_catserv.c (File Modified) 


jilles      2006/09/13 21:54:38 UTC	(20060913-6381)
  Log:
  Add a simple web server using the new libatheme stuff.
  

  Changes:	Modified:
  +1 -0		trunk/contrib/Makefile.in (File Modified) 
  +249 -0	trunk/contrib/gen_httpd.c (File Added) 


jilles      2006/09/13 21:53:18 UTC	(20060913-6379)
  Log:
  Add sendq_add_eof(), schedules the write side of the
  connection to be closed after the sendq has been sent;
  also, when that happens, no more input will be accepted.
  

  Changes:	Modified:
  +2 -0		trunk/libatheme/connection.h (File Modified) 
  +45 -1	trunk/libatheme/datastream.c (File Modified) 
  +1 -0		trunk/libatheme/org.atheme.claro.base.datastream (File Modified) 


jilles      2006/09/13 16:10:57 UTC	(20060913-6377)
  Log:
  Set CF_LISTENING flag on listeners.
  

  Changes:	Modified:
  +1 -1		trunk/libatheme/connection.c (File Modified) 


jilles      2006/09/13 16:08:25 UTC	(20060913-6375)
  Log:
  Get rid of listener_in hook, this is pointless
  (read_handler does the job fine) and not used.
  

  Changes:	Modified:
  +0 -1		trunk/doc/HOOKS (File Modified) 
  +1 -4		trunk/libatheme/poll.c (File Modified) 
  +1 -4		trunk/libatheme/select.c (File Modified) 


jilles      2006/09/13 15:56:58 UTC	(20060913-6373)
  Log:
  - Get rid of connection_dead hook and replace it with
    close_handler callback. This way other connections
    than the ircd uplink can have special shutdown code.
  - Use the CF_DEAD flag to mark connections that got
    an error in sendq_flush() to close them when it is
    safe to do so. We may call sendq_flush() on a
    different connection than the current node in
    poll.c's LIST_FOREACH_SAFE.
  

  Changes:	Modified:
  +0 -1		trunk/doc/HOOKS (File Modified) 
  +0 -1		trunk/include/uplink.h (File Modified) 