@@ -1,3 +1,12 @@
+jilles      2006/09/13 22:13:31 UTC	(20060913-6385)
+  Log:
+  HEAD shouldn't send the file data...
+  
+
+  Changes:	Modified:
+  +1 -1		trunk/contrib/gen_httpd.c (File Modified) 
+
+
 jilles      2006/09/13 22:08:28 UTC	(20060913-6383)
   Log:
   Adapt catserv to ctcp changes.
